# octopus-relay-contract

./: .gitignore  Cargo.toml  README.md  build.sh
oct-token/: Cargo.toml
oct-token/src/: lib.rs
octopus-relay/: Cargo.toml
octopus-relay/src/: appchain_prover.rs  bridge.rs  bridge_token_manager.rs  bridging.rs  lib.rs  native_token_manager.rs  pipeline.rs  proof_decoder.rs  relayed_bridge_token.rs  storage_key.rs  storage_migration.rs  types.rs
octopus-relay/src/appchain/: delegator.rs  fact.rs  metadata.rs  mod.rs  state.rs  validator.rs
src/: lib.rs
tests/sim/: default.rs  main.rs  tests.rs  utils.rs
