[package]
name = "octopus-relay-contract"
version = "0.1.0"
authors = ["Cdot Team"]
edition = "2018"


[dev-dependencies]
near-sdk = "=3.1.0"
near-contract-standards = "3.1.0"
near-sdk-sim = "=3.1.0"
hex = "0.4.2"
num-format = "0.4.0"

# remember to include a line for each contract
oct-token = { path = "./oct-token" }
octopus-relay = { path = "./octopus-relay" }


[workspace]
members = ["oct-token", "octopus-relay"]

[patch.crates-io]
near-sdk = { git = "https://github.com/octopus-network/near-sdk-rs.git", branch = "test2" }
near-contract-standards = { git = "https://github.com/octopus-network/near-sdk-rs.git", branch = "test2" }
near-sdk-sim = { git = "https://github.com/octopus-network/near-sdk-rs.git", branch = "test2" }
near-sdk-macros = { git = "https://github.com/octopus-network/near-sdk-rs.git", branch = "test2" }

sp-core = { git = "https://github.com/octopus-network/substrate.git", branch = "polkadot-v0.9.5" }
sp-runtime = { git = "https://github.com/octopus-network/substrate.git", branch = "polkadot-v0.9.5" }

sp-std = { git = "https://github.com/octopus-network/substrate.git", branch = "polkadot-v0.9.5" }
sp-consensus-babe = { git = "https://github.com/octopus-network/substrate.git", branch = "polkadot-v0.9.5" }

near-metrics = { git = "https://github.com/octopus-network/nearcore.git", branch = "test" }

[patch."https://github.com/paritytech/substrate"]
sp-api = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-application-crypto = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-core = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-io = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-keystore = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-std = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-storage = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-externalities = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime-interface = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-trie = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-version = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-state-machine = { git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }