[package]
name = "octopus-relay-contract"
version = "0.1.0"
authors = ["Cdot Team"]
edition = "2018"


[dev-dependencies]
near-sdk = "=3.1.0"
near-contract-standards = "3.1.0"
near-sdk-sim = "=3.1.0"
hex = "0.4.2"
num-format = "0.4.0"

# remember to include a line for each contract
oct-token = { path = "./oct-token" }
octopus-relay = { path = "./octopus-relay" }


[workspace]
members = ["oct-token", "octopus-relay"]