[package]
name = "octopus-relay"
version = "0.1.0"
authors = ["Cdot Team"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = { version = "3.1.0" }
hex = { version = "0.4.2", features = ["alloc"] }
borsh = "0.8.2"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }

# https://docs.rs/getrandom/0.2.1/getrandom/#indirect-dependencies
getrandom = { version = "0.2", features = ["js"] }
sp-core = { default-features = false, version = "3.0.0", git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-runtime = { default-features = false,  version = "3.0.0", git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5'  }

# TODO: move to beefy light client
mmr-lib = { default-features = false, package = "ckb-merkle-mountain-range", version = "0.3.1" }
pallet-mmr-primitives = { default-features = false, git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5' }
sp-std = { default-features = false, version = "3.0.0", git = 'https://github.com/octopus-network/substrate.git', branch = 'polkadot-v0.9.5'  }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-mmr-primitives/std",
    "mmr-lib/std",
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[dev-dependencies]
sp-consensus-babe = "0.9.0"
beefy-primitives = { git = "https://github.com/octopus-network/grandpa-bridge-gadget", branch = "octopus" }
