[package]
name = "octopus-relay"
version = "0.1.0"
authors = ["Cdot Team"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
hex = "0.4.2"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }